# terminusdb-client-haskell

./: README.md  terminusdb-client-haskell.cabal
src/: TerminusDBClient.hs
