name:                terminusdb-client-haskell
version:             0.1.0.0
synopsis:            Haskell client for TerminusDB
-- description:
homepage:            terminusdb.com
license:             Apache-2.0
license-file:        LICENSE
author:              Robin de Rooij
maintainer:          rderooij685@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14, aeson, req
  hs-source-dirs:      src
  default-language:    Haskell2010
